<resources>
    <string name="app_name">采集鸭</string>
    <string name="app_home">首页</string>
    <string name="app_login">登录</string>
    <string name="login_user">账号</string>
    <string name="login_password">密码</string>
    <string name="shr_error_password">请输入正确密码</string>
    <string name="nav_set">设置</string>
    <string name="nav_audio">音频采集</string>
    <string name="nav_image">图像采集</string>
    <string name="nav_video">视频采集</string>
    <string name="home_image">图像</string>
    <string name="home_audio">音频</string>
    <string name="home_video">视频</string>
</resources>