<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/menu"
            app:title="@string/app_home" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/home_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/home_nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_view_header"
            app:menu="@menu/nav_view_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/home_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                app:tabBackground="@color/purple_500"
                app:tabIconTint="@color/purple_200"
                app:tabIndicatorColor="@color/white"
                app:tabInlineLabel="true"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/purple_200">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/camera"
                    android:text="@string/home_image" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_audio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/mic"
                    android:text="@string/home_audio" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_video"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/video"
                    android:text="@string/home_video" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/home_frame_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>